# fpga-parallelism

./: README.md
.github/workflows/: cmake.yml
parallel_sort/: README.md
parallel_sort/HLS/: .gitignore  CMakeLists.txt  README.md
parallel_sort/HLS/src/: main.cpp  sort.cpp  sort.hpp  sort2.cpp  sort2.hpp  sort_types.hpp
parallel_sort/IllustratedSortingAlgorithms/: bitonic-mergesort_tikz.txt  bubblesort_tikz.txt  implementedBitonicMergesort.txt
parallel_sort/OpenCL/: .gitignore  CMakeLists.txt  README.md
parallel_sort/OpenCL/src/: main.cpp
parallel_sort/Zynq/: AddRetime.tcl  README.md
parallel_sort/Zynq/src/: main.c
parallel_sort/Zynq/src_2/: main.c
parallel_sort/experiments/src/: main.c  sort.c  sort.h  sort_types.h
parallel_sort/experiments/src_openMP_tests/: CMakeLists.txt  main.cpp
parallel_sort/linegraphsTiming/Matlab/: plots.m
